apps/architecture-portal/versioned_docs/version-1.0.53.0/product/capability-map.mdx
---
title: 产品能力地图
area: product
status: partial
owners: [product, core]
source_paths:
  - products/lmdj/assembly.json
  - products/lmdj/assembly.lock.json
  - docs/prd/decision-log.md
  - docs/prd/decisions/2026-09-10-cardputer-runtime-host-first-slice.md
---

import {BuildIdentity} from '@site/src/components/BuildIdentity';

<BuildIdentity />
<BuildIdentity kind="hosts" id="creator-web" />
<BuildIdentity kind="hosts" id="web-runtime-host" />

## 创作能力

Project Truth、命令处理、项目存取、portable Bundle、确定性 Cook 与 Sequence recording 已实现。当前 writer 写出 Project v5；v1/v2/v3/v4 只作为迁移输入。v5 延续 16 个 Pattern Slot 与 Performance，并新增封闭的 capability derivation，持久化 Slice 的 source revision、Attempt、Capability/Provider/model identity 与 interval recipe。Creator Web 提供 Pattern create/select、Record/Stop、overdub、Quantize/Swing/BPM/bars、next-Bar switch、owner-loss recovery，以及既有 Sample Editor、Pad Capture 与 64-Pad Runtime surface。Crop 只修改未提交 capture；候选采纳与 Creator Slice surface 属于后续 L2/L5。

## 演奏能力

Runtime Snapshot、样本准备、离线渲染、实时引擎、Voice 状态与 Sample preview 具有自动化覆盖。Stage 10 加入固定八级 master FX 链（filter、delay、reverb、stutter、gate、reverse、crush、cutter，取值域 0..1000、周期由 Bar 推导）、master tap 采集、Performance 录制与保存、Cooker replay projection、resample 提交与 Performance recovery，同样只有自动化覆盖。实时不变量未变：实时线程不分配、不加锁、不修改 Project、不做 journal I/O。低延迟手感、MIDI/触控输入、设备生命周期与 Perform 演奏体验需要独立物理验收；Stage 10 的物理行仍是 deferred。

### Cardputer 首版：已设计，尚未成为可用产品

[已批准首版范围](https://github.com/endaye/lmdj/blob/main/docs/prd/decisions/2026-09-10-cardputer-runtime-host-first-slice.md)
采用电脑经 Facade 导出、USB 装载、设备确认接收和本地演奏。供电持续时拔线可继续
单 Pattern 与实时 Pad；接收失败或复位为 empty，不自动播放、不保存 Project Truth。
首版目标为 4 个 One Shot Pad、合计 1 秒的不同鼓音、至少 4 个声音实际重叠与
30 分钟稳定音乐运行。它们是先固定再验证的目标，不是已经测得的硬件容量。
暂不包含 Wi-Fi、SD 导入、Creator 新界面或设备端编辑/采样。

[实施计划](https://github.com/endaye/lmdj/blob/main/docs/plans/2026-09-10-cardputer-runtime-host.md)
按设计 → 真实容量 → Driver/Host → 输入/显示与导出/传输 → 测试 Build/不可变快照 →
完整真机验收推进。现有单音听测不解除容量前置；资源不足保留负结果并修复根因，
不缩短音乐目标。Cardputer Host 尚未加入 active Assembly，没有可投影的正式 Host
身份或该闭环的已验收 Product Build。

## 智能能力

Capability Contract、Registry、Attempt Store 与本地成功/失败 Proof Provider 已实现。Slice 参考算法已注册；基准召回率 80%，仍有重叠尾音漏检，不代表生产质量。生产模型、云服务、鉴权、计费和数据政策尚未实现。

## Host 与交付能力

当前 Product、Module 与 Host 身份由上方 Build Identity 从 active manifests 派生。本次注册 Slice 参考实现，并为已合入的 Audio Runtime ABI 变更分配匹配身份及依赖重建版本。Slice 仍仅声明 test 平台，默认权限与用户选择不变；参考 Provider 的切片执行已实现，候选采纳与 Creator surface 属于后续 L2/L5。既有 Sound Set 试听可发声：Facade 解析并把关后交回已重采样的 PCM，拥有引擎的两个 Host——Web Host 与 Native Host——各自把它发布进引擎保留的双槽 audition 池并起声，并在回包上带 `played` 说明这一次是否真的起了声；两者都不读 Set Store，跨边界的只有几何信息。两侧都有自动化检查观察到试听确实发声：原生侧一条 journey 把试听渲染到结束并断言 `played: true`，Web 侧在真实浏览器里对打包后的 Creator 断言 `played: true` 并确认 Host 在预览播完后仍然站着。停止只在 Web Host 上有对应操作：`soundset.audition.stop` 是幂等的 Host 操作，Facade 不服务它。Native Host 没有停止操作，因为它的试听是 `one_shot`、后一次试听按池的替换语义取代前一次，而确定性后端在写出响应之前就已把预览渲染完毕。试听对 Project Truth 是 query —— 不建 Asset、不动 Pad、不推进 revision。Sound Set 目录浏览、检查、映射预览与安装继续在全部五个 Host 可用；Catalog 只在 Workspace 本地或由 Host 供给字节，Core 不含网络代码。Project v5、Sequence journal/receipt/recovery、performance 会话与 draft 生命周期、整数音频 transport、统一输入 admission，以及 manifest 总量与 1 MiB chunk 解耦的有界长素材摄入继续构成同一能力闭环；Creator 分发清单保持六项资产，Diagnostic Host 保持十五项且不声明 `perform_master_tap_worklet`。
Product Build `1.0.42.0` 曾装配 Stage 10 Perform 能力：它引入 `lmdj.project.v4 · 4.0.0`，把 Authoring Domain 与 Project I/O 升至 `2.0.0`、Project Cooker 升至 `1.1.0`，Audio Runtime、Application Facade、Web Runtime Platform 与五个 Host 升至 `3.0.0`，并让 Creator 分发清单新增 `perform_master_tap_worklet` 一项资产共六项。
Product Build `1.0.25.0` 曾分配 G2 evidence-durability 级联，同样不新增公开产品能力。
Product Build `1.0.24.0` 曾分配 provider-sdk 修复级联：CLI `1.0.13`、MCP `1.1.10` 与 Native Test Host `1.0.11` 已装配；Creator Web Host `1.3.1` 与 Formal Web Runtime Host `1.2.10` 已装配，并共用 Web Runtime Platform `0.3.1`；本地成功/失败 Proof Provider 也同步升至 `1.0.3`。那次分配修复的是 Attempt reservation 回收与 temp sibling 命名冲突，不新增公开产品能力。

Web Runtime Lab 保持为独立实验工具，不属于 Product Assembly，也不替代正式 Host 或物理设备验收。Product Assembly 锁定确切组件身份，版本发布不由任意 Host 决定。

## 状态解释

“已实现”表示 active source 加当前测试；“部分实现”明确缺口；“已设计/规划中”不作为可用功能宣传。

Stage 12 提供 SDK ArtifactSource、共享 staging budget、受限生命周期回调、消费者
output validator 和 Slice 参考实现。Facade 已接通 verified Project Asset owner 与
显式会话 grant；CLI/MCP/Native 和两个 Web Host 可通过公开控制面运行并检查耐久
Attempt。默认权限不变，参考运行仍使用 test token；Workspace Job、CandidateIndex、
用户切片界面与结果采纳不属于这一 owner 接线。
